--- a/axios/axios 其他使用.html
+++ b/axios/axios 其他使用.html
@@ -3,42 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>axios基本使用</title>
+    <link rel="stylesheet" href="./css/base.css">
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
-    <style>
-        .container {
-            margin-left: 100px;
-        }
-
-        .page-header {
-            padding: 10px;
-            border-bottom: solid 2px lightgrey;
-        }
-
-        .btn {
-            width: auto;
-            height: 30px;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            font-family: sans-serif;
-        }
-
-        .btn-primary {
-            background-color: #256098;
-        }
-
-        .btn-alert {
-            background-color: #f0ab50;
-        }
-
-        .btn-green {
-            background-color: #55a958;
-        }
-
-        .btn-danger {
-            background-color: #e4614c;
-        }
-    </style>
 </head>
 <body>
 <div class="container">
@@ -76,6 +42,7 @@
             console.log(response);
         });
     })
+    /*
     // 发送 PUT 请求
     btn[2].addEventListener("click", () => {
         // axios()
@@ -84,6 +51,21 @@
     btn[3].addEventListener("click", () => {
         // axios()
     })
+    */
+    /*
+     * axios request config
+     *
+     *  axios({
+     *      url: '/post',
+     *      // /post?a=100&b=200
+     *      // /post/a/100/b/200
+     *      // /post /a.100/b.200
+     *      params: {
+     *          a: 100,
+     *          b: 200
+     *      }
+     *  })
+     */
 </script>
 </body>
 </html>
