--- a/axios/axios 基本使用.html
+++ b/axios/axios 基本使用.html
@@ -3,42 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>axios基本使用</title>
+    <link rel="stylesheet" href="./css/base.css">
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
-    <style>
-        .container {
-            margin-left: 100px;
-        }
-
-        .page-header {
-            padding: 10px;
-            border-bottom: solid 2px lightgrey;
-        }
-
-        .btn {
-            width: auto;
-            height: 30px;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            font-family: sans-serif;
-        }
-
-        .btn-primary {
-            background-color: #256098;
-        }
-
-        .btn-alert {
-            background-color: #f0ab50;
-        }
-
-        .btn-green {
-            background-color: #55a958;
-        }
-
-        .btn-danger {
-            background-color: #e4614c;
-        }
-    </style>
 </head>
 <body>
 <div class="container">
