--- a/axios/axios 创建实例对象.html
+++ b/axios/axios 创建实例对象.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h2 class="page-header">基本使用</h2>
     <button class="btn btn-primary">发送 GET 请求</button>
-    <button class="btn btn-alert">发送 POST 请求</button>
+    <button class="btn btn-warning">发送 POST 请求</button>
 </div>
 <script>
     const btns = document.querySelectorAll('button');
