--- a/axios/axios 基本使用.html
+++ b/axios/axios 基本使用.html
@@ -10,7 +10,7 @@
 <div class="container">
     <h2 class="page-header">基本使用</h2>
     <button class="btn btn-primary">发送 GET 请求</button>
-    <button class="btn btn-alert">发送 POST 请求</button>
+    <button class="btn btn-warning">发送 POST 请求</button>
     <button class="btn btn-green">发送 PUT 请求</button>
     <button class="btn btn-danger">发送 DELETE 请求</button>
 </div>
