--- a/ES6/Symbol 内置值.html
+++ b/ES6/Symbol 内置值.html
@@ -6,52 +6,67 @@
 </head>
 <body>
 <script>
-  // Symbol 内置值
-  // 除了定义自己使用的 Symbol 值以外, ES6 还提供了 11 个内置的 Symbol 值, 指向语言内部使用的方法
-  /*
-   * Symbol.hasInstance
-   * 当其他对象使用 instanceof 运算符, 判断是否为该对象的实例时, 会调用这个方法
-   */
-  /*
-   * Symbol.isConcatSpreadable
-   * 对象的Symbol.isConcatSpreadable 属性等于的是一个布尔值, 表示该对象用于 Array,prototype.concat()时, 是否可以展开
-   */
-  /*
-   * Symbol.unscopables
-   * 该对象指定了使用 with 关键字时, 哪些属性会被 with 环境排除
-   */
-  /*
-   * Symbol.match
-   * 当执行 str.match(myObject) 时, 如果该属性存在, 会调用它, 返回该方法的返回值
-   */
-  /*
-   * Symbol.replace
-   * 当该对象被 str.replace(myObject) 方法调用时, 会返回方法的返回值
-   */
-  /*
-   * Symbol.search
-   * 当该对象被 str.search(myObject) 方法调用时, 会返回该方法的返回值
-   */
-  /*
-   * Symbol.split
-   * 当该对象被 str.split(myObject) 方法调用时, 会返回该方法的返回值
-   */
-  /*
-   * Symbol.iterator
-   * 对象进行 for...of 循环时, 会调用 Symbol.iterator 方法, 返回该对象的默认遍历器
-   */
-  /*
-   * Symbol.toPrimitive
-   * 该对象被转为原始类型的值时, 会调用这个方法, 返回该对象对应的原始类型值
-   */
-  /*
-   * Symbol.toStringTag
-   * 在该对象上面调用 toString 方法时, 返回该方法的返回值
-   */
-  /*
-   * Symbol.species
-   * 创建衍生对象时, 会使用该属性
-   */
+    // Symbol 内置值
+    // 除了定义自己使用的 Symbol 值以外, ES6 还提供了 11 个内置的 Symbol 值, 指向语言内部使用的方法
+    // 控制对象 在特定场景下的 表现
+    /*
+     * Symbol.hasInstance
+     * 当其他对象使用 instanceof 运算符, 判断是否为该对象的实例时, 会调用这个方法
+     */
+    class Person { // 和构造函数一样, 就是为了实例化对象
+        static [Symbol.hasInstance](param) {
+            console.log(param);
+            console.log("我被用来检测类型了");
+        }
+    }
+    let o = {};
+    console.log(o instanceof  Person); // o 会作为 param 的实参 传给 [Symbol.hasInstance] 函数 自动判断类型
+
+    /*
+     * Symbol.isConcatSpreadable
+     * 对象的Symbol.isConcatSpreadable 属性等于的是一个布尔值, 表示该对象用于 Array, prototype.concat()时, 是否可以展开
+     */
+    const arr = [1, 2, 3];
+    const arr2 = [4, 5, 6];
+    // console.log(arr.concat(arr2)); // [1, 2, 3, 4, 5, 6]
+    arr2[Symbol.isConcatSpreadable] = false;
+    console.log(arr.concat(arr2)); // [1, 2, 3, Array(3)]  [1, 2, 3, [4, 5, 6]]
+    /*
+     * Symbol.unscopables
+     * 该对象指定了使用 with 关键字时, 哪些属性会被 with 环境排除
+     */
+    /*
+     * Symbol.match
+     * 当执行 str.match(myObject) 时, 如果该属性存在, 会调用它, 返回该方法的返回值
+     */
+    /*
+     * Symbol.replace
+     * 当该对象被 str.replace(myObject) 方法调用时, 会返回方法的返回值
+     */
+    /*
+     * Symbol.search
+     * 当该对象被 str.search(myObject) 方法调用时, 会返回该方法的返回值
+     */
+    /*
+     * Symbol.split
+     * 当该对象被 str.split(myObject) 方法调用时, 会返回该方法的返回值
+     */
+    /*
+     * Symbol.iterator
+     * 对象进行 for...of 循环时, 会调用 Symbol.iterator 方法, 返回该对象的默认遍历器
+     */
+    /*
+     * Symbol.toPrimitive
+     * 该对象被转为原始类型的值时, 会调用这个方法, 返回该对象对应的原始类型值
+     */
+    /*
+     * Symbol.toStringTag
+     * 在该对象上面调用 toString 方法时, 返回该方法的返回值
+     */
+    /*
+     * Symbol.species
+     * 创建衍生对象时, 会使用该属性
+     */
 </script>
 </body>
 </html>
