--- a/Promise/async 和 await/async 与 await 结合发送 AJAX.html
+++ b/Promise/async 和 await/async 与 await 结合发送 AJAX.html
@@ -8,30 +8,31 @@
 <body>
 <button id="btn">点击获取段子</button>
 <script>
-  function sendAJAX(url) {
-    return new Promise((resolve, reject) => {
-      const xhr = new XMLHttpRequest();
-      xhr.responseType ='json';
-      xhr.open('GET', url);
-      xhr.send();
-      xhr.onreadystatechange = () => {
-        if (xhr.readyState === 4) {
-          if (xhr.status >= 200 && xhr.status < 300) {
-            resolve(xhr.response);
-          } else {
-            reject(xhr.status);
-          }
-        }
-      };
+    function sendAJAX(url) {
+        return new Promise((resolve, reject) => {
+            const xhr = new XMLHttpRequest();
+            xhr.responseType = 'json';
+            xhr.open('GET', url);
+            xhr.send();
+            xhr.onreadystatechange = () => {
+                if (xhr.readyState === 4) {
+                    if (xhr.status >= 200 && xhr.status < 300) {
+                        resolve(xhr.response);
+                    } else {
+                        reject(xhr.status);
+                    }
+                }
+            };
+        });
+    }
+
+    // 段子接口地址 https://api.apiopen.top/getJoke
+    let btn = document.getElementById('btn');
+    btn.addEventListener('click', async function () {
+        // 获取段子信息
+        let duanzi = await sendAJAX('https://api.apiopen.top/getJoke'); // 使用 async 和 await  就不用 then方法那套了
+        console.log(duanzi);
     });
-  }
-  // 段子接口地址 https://api.apiopen.top/getJoke
-  let btn = document.getElementById('btn');
-  btn.addEventListener('click', async function () {
-    // 获取段子信息
-    let duanzi = await sendAJAX('https://api.apiopen.top/getJoke');
-    console.log(duanzi);
-  });
 </script>
 </body>
 </html>
