finish TS first 14 videos

--- a/ES6-11/解构赋值.html
+++ b/ES6-11/解构赋值.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    // ES6 允许按照一定模式从数组和对象中提取只, 对变量进行赋值
+    // ES6 允许按照一定模式从数组和对象中提取只对变量进行赋值
     // 这被称为解构赋值
     // 1. 数组的解构
     const F4 = ['小沈阳', '刘能', '赵四', '宋小宝'];
