--- a/TS/ts - class/index.html
+++ b/TS/ts - class/index.html
@@ -5,6 +5,6 @@
     <title>class</title>
 </head>
 <body>
-<script src="./dist/01_类的简介.js"></script>
+<script src="./dist/07_属性的封装.js"></script>
 </body>
 </html>
