--- a/React/07_组件实例的三大属性_2 props/1_props 基本使用.html
+++ b/React/07_组件实例的三大属性_2 props/1_props 基本使用.html
@@ -45,6 +45,7 @@ const p = {name: '老刘', age: 20, sex: '男'};
 
 /*
  * 原生的 js
+ * 构造字面量对象时使用展开语法
  * const person = {name: 'tom', age: 20}
  * const person2 = {...person} // 深拷贝
  * const person3 = {...person, name: 'jerry', school: 'xxx'} // 在复制时,修改/增加 key-value
