add react-staging default files

--- a/JS/原型.html
+++ b/JS/原型.html
@@ -40,7 +40,7 @@
 
 
       // Person.prototype.sayName = function () {
-      //     alert("Hello,I'm"+this.name);
+      //     alert("Index,I'm"+this.name);
       // }
     </script>
 </head>
