--- a/React/react-basic/07_组件实例的三大属性_2 props/1_props 基本使用.html
+++ b/React/react-basic/07_组件实例的三大属性_2 props/1_props 基本使用.html
@@ -18,7 +18,7 @@
 <script type="text/babel"> /* 此处一定要写 babel */
 /*
  * 要求:
- * 创建组件时, name必须有, age 必须时数值类型, sex 有默认值
+ * 创建组件时, name必须有, age 必须是数值类型, sex 有默认值
  */
 
 
