--- a/React/react-basic/12_组件的生命周期/02_react生命周期(旧).html
+++ b/React/react-basic/12_组件的生命周期/02_react生命周期(旧).html
@@ -137,8 +137,8 @@
         }
     }
     // 渲染组件
-    // ReactDOM.render(<Count/>, document.getElementById('test'))
-    ReactDOM.render(<A/>, document.getElementById('test'))
+    ReactDOM.render(<Count/>, document.getElementById('test'))
+    // ReactDOM.render(<A/>, document.getElementById('test'))
 </script>
 </body>
 </html>
