--- a/JS/二级菜单/index.html
+++ b/JS/二级菜单/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>index</title>
     <!--    <style type="text/css">-->
-    <!--        @import "css/index.css";-->
+    <!--        @import "css/index.module.css";-->
     <!--    </style>-->
     <style type="text/css">
         * {
