--- a/React/react-basic/02_虚拟 DOM 创建的两种方式/1_使用 jsx 创建虚拟 DOM.html
+++ b/React/react-basic/02_虚拟 DOM 创建的两种方式/1_使用 jsx 创建虚拟 DOM.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>3_虚拟 DOM 与真实 DOM</title>
+    <title>1_使用 jsx 创建虚拟 DOM</title>
 </head>
 <body>
 <!-- 准备好一个容器 -->
 <div id="test"></div>
-<div id="demo"></div>
 <!-- 引入 react 核心库-->
 <script type="text/javascript" src="../js/react.development.js"></script>
 <!-- 引入 react-dom, 用于支持 react 操作 dom-->
@@ -19,27 +18,12 @@
 // 1. 创建虚拟 DOM
 const VDOM = ( /* 此处一定不要写引号, 因为不是字符串 */
     <h1 id="title">
-        <span>Hello, React</span>
+        <span>Index, React</span>
     </h1>
 );
 // 2. 渲染虚拟 DOM 到页面
 ReactDOM.render(VDOM, document.getElementById("test")); /* 把 'VDOM' 这个 DOM , 渲染到 test 这个容器*/
 
-/*
- * VDOM 到底是个什么?
- */
-const TDOM = document.getElementById('demo');
-console.log('虚拟 DOM', VDOM);
-console.log('真实 DOM', TDOM);
-debugger;
-// console.log(typeof VDOM);
-// console.log(VDOM instanceof Object);
-/*
- * 关于虚拟 DOM
- *  1. 本质是 Object 类型的对象 (一般对象)
- *  2. 虚拟 DOM 比较 '轻', 真实 DOM 比较 '重', 因为虚拟 DOM 是 React 内部在用, 无需真实 DOM 上那么多的属性
- *  3. 虚拟 DOM 最终会被 React 转化为 真实 DOM, 呈现在页面上
- */
 </script>
 </body>
 </html>
