--- a/React/react-staging/public/index.html
+++ b/React/react-staging/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>hello,react</title>
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <title>React</title>
 </head>
 <body>
 <div id="root"></div>
