--- a/JS/Date.html
+++ b/JS/Date.html
@@ -5,7 +5,7 @@
     <title></title>
     <script type="text/javascript">
       /*
-       * Data对象
+       * Date对象
        *  - 在JS中使用Date对象来表示一个时间
        *
        * getDate()
