--- a/JS/String().html
+++ b/JS/String().html
@@ -7,9 +7,9 @@
       /*
        * String()包装类
        *
-       * chatAt()
+       * charAt()
        *
-       * chatCodeAt()
+       * charCodeAt()
        *
        * fromCharCode()
        *
