--- a/JS/事件的委派.html
+++ b/JS/事件的委派.html
@@ -42,6 +42,7 @@
             u1.onclick = function(event) {
                 // 如果触发事件的对象是我们期望的元素,则执行否则不执行
                 // alert(this); // u1
+                // console.log(event);
                 event = event || window.event;
                 /*
                  * target
