--- a/JS/其他的样式操作属性.html
+++ b/JS/其他的样式操作属性.html
@@ -58,7 +58,7 @@
                  * offsetParent
                  *  - 可以用来获取当前元素的"定位父元素"
                  *  - 会获取到离当前元素最近的开启定位的祖先元素
-                 *    如果所有的祖先元素都没痒开启定位，则返回body
+                 *    如果所有的祖先元素都没开启定位，则返回body
                  */
                 // var op = box1.offsetParent;
                 // alert(op);
