--- a/JS/原型.html
+++ b/JS/原型.html
@@ -8,7 +8,7 @@
        * 原型 prototype
        *
        * 我们创建的每一个函数,解析器都会向函数中添加一个属性prototype
-       *    这个属性对应这一个对象,叫做原型对象
+       *    这个属性对应着一个对象,叫做原型对象
        * 如果函数作为普通函数调用prototype没有任何作用
        * 当函数以构造函数的形式调用时,它所创建的对象中都会有一个隐含的属性
        *    指向该构造函数的原型对象,可以通过__proto__来方法该属性
@@ -17,7 +17,7 @@
        *    可以将对象中共有的内容,统一设置到原型对象中
        * 当访问一个对象的属性或方法时,会先在对象自身中寻找,如果有直接使用,如果没有就去原型对象中寻找
        *
-       * 以后创建构造函数时,可以将这些对象共有的属性和方法,同意添加到构造函数的原型对象中
+       * 以后创建构造函数时,可以将这些对象共有的属性和方法,统一添加到构造函数的原型对象中
        *    这样不用分别为每一个对象添加,也不会影响到全局作用域,就可以使每个对象都具有这些属性和方法了
        *
        * 使用in检查对象中是否含有某个属性时,如果对象中没有但是原型中有,也会返回true
@@ -25,7 +25,7 @@
        * 可以使用对象的hasOwnProperty()来检查对象自身是否含有该属性
        * mc.hasOwnProperty("age")
        *
-       * 原型对象也有原想对象.寻找属性或方法时一层一层往上找
+       * 原型对象也有原型对象.寻找属性或方法时一层一层往上找
        * Object对象的原型没有原型.如果在Object中依然没有找到.则返回false
        */
 
