--- a/JS/定时器.html
+++ b/JS/定时器.html
@@ -11,7 +11,7 @@
             //     alert("hello");
             // }
             /*
-             * 如果希望一段代码,可以每间隔一段时间执行以此, 可以使用定时调用
+             * 如果希望一段代码,可以每间隔一段时间执行一次, 可以使用定时调用
              */
             /*
              * setInterval()
@@ -22,7 +22,7 @@
              *      2.每次调用间隔的事件,单位是毫秒
              *
              * - 返回值:
-             *      返回一个Number类型的数据
+             *      返回一个Number类型的数字
              *      这个数字用来作为定时器的唯一标识
              */
             // var num = 1;
