--- a/JS/构造函数.html
+++ b/JS/构造函数.html
@@ -14,10 +14,10 @@
     /*
      * 创建构造函数,专门用来创建Person对象
      *    构造函数就是一个普通函数.创建方式没有区别
-     * 不同的时构造函数习惯首字母大写
+     * 不同的构造函数习惯首字母大写
      *
      *
-     * 构造函数和普通函数的区别就时调用方式不同
+     * 构造函数和普通函数的区别就是调用方式不同
      *    普通函数就是直接调用,而构造函数需要使用new关键字来调用
      *
      * 构造函数的执行流程
@@ -60,7 +60,7 @@
     /*
      * 在Person的构造函数中,为每一个对象都添加向一个sayName方法
      *      目前我们的方法是在构造函数内部创建的,
-     *          也就是构造函数没执行一次就会创建一个新的sayName方法
+     *          也就是构造函数每执行一次就会创建一个新的sayName方法
      *      也是所有实例的sayName都是唯一的
      *      这样就导致了构造函数执行一次就会创建一个新的方法
      *          执行10000次就会创建10000个新的方法
