--- a/JS/类的操作.html
+++ b/JS/类的操作.html
@@ -17,6 +17,9 @@
         }
     </style>
     <script type="text/javascript">
+        /* 
+        window.onload 是一个 JavaScript 事件处理程序，用于在浏览器完全加载和解析 HTML 文档及其所有相关资源（如图片、样式表等）后执行指定的代码。
+        */
         window.onload = function () {
             var box = document.getElementById("box");
             var btn01 = document.getElementById("btn01");
