--- a/JS/练习.html
+++ b/JS/练习.html
@@ -13,7 +13,7 @@
         var flag = confirm("确认删除"+name+"吗?");
         // console.log(flag);
         /*
-         * 点击超链接以后,超链接会跳转页面,这是一鞥默认行为
+         * 点击超链接以后,超链接会跳转页面,这是一个默认行为
          *  但是我们不希望默认行为,可以通过在响应函数的最后return false来取消默认行为
          */
         if(flag){
@@ -35,8 +35,8 @@
              *
              * i作用域是所在函数,而不是所在代码块, for循环的var i ,i泄露给全局了
              * 闭包的问题,需要规避(可以使用闭包解决,或者直接使用有局部作用的let)
-             * 点击事件是异步事件, 异步事件会在督导代码时放进队列, 等主线进程执行完才开始,那时候经过几个循环i已经时3了
-             * 回调函数,这里没用传入i的值, 往外找就是for循环结束后的i的值
+             * 点击事件是异步事件, 异步事件会在督导代码时放进队列, 等主线进程执行完才开始,那时候经过几个循环i已经是3了
+             * 回调函数,这里没有传入i的值, 往外找就是for循环结束后的i的值
              *
              * JS的异步调用,总是给你不经意的惊喜
              *
