--- a/JS/读取样式表的样式.html
+++ b/JS/读取样式表的样式.html
@@ -39,7 +39,7 @@
                  *
                  * 该方法会返回一个对象,对象中封装了当前元素对应的样式
                  *  可以通过对象的样式名来读取样式
-                 *  比如,没有涉笔width, 它不会获取到auto,而是一个真实的长度
+                 *  比如,没有设置width, 它不会获取到auto,而是一个真实的长度
                  */
                 // alert(getComputedStyle(box1,null).width);
                 // alert(getStyle(box1, "width"));
