--- a/JS/轮播图.html
+++ b/JS/轮播图.html
@@ -146,7 +146,7 @@
                     move(imgList, "left", -243 * index, 10, function () {
                         setA(); // 最后一张之后会立马换到第一张
                     });
-                }, 1000);
+                }, 3000);
             };
         };
     </script>
@@ -154,7 +154,7 @@
 <body>
 <!-- 创建一个外部的div, 来作为大的容器 -->
 <div id="outer">
-    <!-- 创建一个ul,用于防止图片 -->
+    <!-- 创建一个ul,用于放置图片 -->
     <ul id="imgList">
         <li><img src="xiaoxiaoImages/xiaoxiao-01.jpg"></li>
         <li><img src="xiaoxiaoImages/xiaoxiao-02.jpg"></li>
