--- a/JS/鼠标的滚轮事件.html
+++ b/JS/鼠标的滚轮事件.html
@@ -20,7 +20,7 @@
         // 获取id为box1的div
         var box1 = document.getElementById("box1");
         // 为box1绑定一个鼠标滚轮滚动的事件
-        box1.addEventListener("", function() {
+        box1.addEventListener("wheel", function() {
             alert("滚了~~");
         }, false);
 
