--- a/JS/事件的传播.html
+++ b/JS/事件的传播.html
@@ -34,8 +34,8 @@
              *  - 关于事件的传播 网景公司和微软公司 有不同的理解
              *  - 微软公司认为事件应该是由内向外传播,也就是当事件触发时,应该先触发当前元素上的事件,
              *      然后再向当前元素的祖先元素上传播, 事件应该在冒泡阶段执行
-             *  - 网景公司认为事件应该时由外向内传播的, 当前事件触发时, 应该先触发当前元素的最外层的祖先元素的事件
-             *      然后再箱内传播给后代元素
+             *  - 网景公司认为事件应该是由外向内传播的, 当前事件触发时, 应该先触发当前元素的最外层的祖先元素的事件
+             *      然后再向内传播给后代元素
              *  - W3C综合了两个公司的方案:将事件分为三个阶段
              *      1.捕获阶段
              *          - 在捕获阶段时从最外层的祖先元素,向目标元素进行事件的捕获,但是默认此时不会触发事件
@@ -44,7 +44,7 @@
              *      3.冒泡阶段
              *          - 事件从目标元素向他的祖先元素传递,以此触发祖先元素上的事件
              *      - 如果希望在捕获阶段就执行事件,可以将addEventListener()的第三个参数设置为true
-             *          一般情况下我们我不会希望在捕获阶段触发事件,所以这个参数一般是false
+             *          一般情况下我们不会希望在捕获阶段触发事件,所以这个参数一般是false
              *      - IE8及以下的浏览器中没有捕获阶段
              *
              */
