--- a/JS/包装类.html
+++ b/JS/包装类.html
@@ -12,11 +12,11 @@
        *
        * 在JS中为我们提供了三个包装类,通过这三个包装类可以将基本数据类型转为对象
        * String()
-       *  - 可以将基本数据类型字符串转换为String对象
+       *  - 可以将基本数据类型String转换为String对象
        * Number()
-       *  - 可以将基本数据类型字符串转换为Number对象       *
+       *  - 可以将基本数据类型Number转换为Number对象       *
        * Boolean()
-       *  - 可以将基本数据类型字符串转换为Boolean对象
+       *  - 可以将基本数据类型Boolean转换为Boolean对象
        *
        * 但是实际应用中不会使用基本数据类型的对象
        * 可能会带来一些不可预料的错误,比如在进行比较时
@@ -25,7 +25,7 @@
        *  当我们对一些基本数据类型的值去调用属性和方法时,
        *  浏览器会临时使用包装类,将其转换为对象,然后再调用对象的属性和方法
        *  var s = 123;
-       *  s = s.toString(); // 将s包装为String()对象,然后调用对象的方法,调用完后再将类型赚转回来
+       *  s = s.toString(); // 将s包装为String()对象,然后调用对象的方法,调用完后再将类型转回来
        */
       // 创建一个Number类型的对象
       var num = new Number(3);
