--- a/AJAX/7-AJAX跨域问题/jsonp/原理.html
+++ b/AJAX/7-AJAX跨域问题/jsonp/原理.html
@@ -20,8 +20,9 @@
         result.innerHTML = data.name;
     }
 </script>
-<!--<script src="./app.js"></script>-->
-<script src="http://127.0.0.1:8000/jsonp-server"></script>
+<!-- <script src="./app.js"></script> -->
+<!-- <script src="http://127.0.0.1:5500/AJAX/7-AJAX%E8%B7%A8%E5%9F%9F%E9%97%AE%E9%A2%98/jsonp/app.js"></script> -->
+<script src="http://127.0.0.1:8001/jsonp-server"></script>
 <!-- 要一个js代码回来执行 -->
 </body>
 </html>
