--- a/AJAX/3-原生AJAX/1-GET.html
+++ b/AJAX/3-原生AJAX/1-GET.html
@@ -23,12 +23,12 @@
          * 进行AJAX操作
          */
         // 1. 创建对象
-        const xhr = new XMLHttpRequest();
+        const xhr = new XMLHttpRequest(); // XHR
         // 2. 初始化, 设置请求方法和url
         /*
          * 请求行的设置
          */
-        xhr.open('GET', 'http://127.0.0.1:8000/server?a=100&b=200&c=300'); // 在 AJAX 中传递参数
+        xhr.open('GET', 'http://127.0.0.1:8001/server?a=100&b=200&c=300'); // 在 AJAX 中传递参数
         // 3. 发送
         xhr.send();
         // 4. 事件绑定, 处理服务端返回的结果
