--- a/AJAX/3-原生AJAX/2-POST.html
+++ b/AJAX/3-原生AJAX/2-POST.html
@@ -24,7 +24,7 @@
         /*
          * 请求行的设置
          */
-        xhr.open('POST', 'http://127.0.0.1:8000/server');
+        xhr.open('POST', 'http://127.0.0.1:8001/server');
 
         /*
          * 请求头的设置
@@ -36,9 +36,11 @@
         xhr.setRequestHeader('name', 'atguigu'); // 自定义, 会报错(非定义的触发安全机制). 需要在server里进行设置特殊的响应头, 实际工作中由后端人员设置好
         // 3. 发送
         /*
-         * 请求体的设置
+         * 请求体的设置: 可以设置任意格式数据
          */
         xhr.send('a=100&b=200&c=300'); // POST请求的参数设置
+        // xhr.send('a:100&b:200&c:300'); // POST请求的参数设置
+        // xhr.send('123321'); // POST请求的参数设置
 
         // 4. 事件绑定
         xhr.onreadystatechange = () => {
