--- a/AJAX/7-AJAX跨域问题/同源策略/index.html
+++ b/AJAX/7-AJAX跨域问题/同源策略/index.html
@@ -14,13 +14,14 @@
      */
     const btn = document.querySelector("button");
     btn.onclick = () => {
-        const x = new XMLHttpRequest();
-        x.open("GET", "/data");
-        x.send();
-        x.onreadystatechange = () => {
-            if (x.readyState === 4) {
-                if(x.status >= 200 && x.status < 300){
-                    console.log(x.response);
+        const xhr = new XMLHttpRequest();
+        // 这里因为是满足同源策略的，所以url可以简写
+        xhr.open("GET", "/data");
+        xhr.send();
+        xhr.onreadystatechange = () => {
+            if (xhr.readyState === 4) {
+                if(xhr.status >= 200 && xhr.status < 300){
+                    console.log(xhr.response);
                 }
             }
         };
